fix vinyl size to fill platter and center align

--- a/src/components/RecordPlayer.module.css
+++ b/src/components/RecordPlayer.module.css
@@ -43,8 +43,8 @@
 }
 
 .vinyl {
-  width: 280px;
-  height: 280px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   position: relative;
   animation: spin 4s linear infinite paused;
